_deploy/bhq-stats-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bhq-stats-ingress
  namespace: baseball
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: baseball-bhq-stats-api.schultz.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bhq-stats
            port:
              number: 8080
